Clean up and add some examples

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-title: Arcana
+title: Evolutionary Architecture
 layout: default
 ---
 			
 <!-- Banner -->
 	<section id="banner">
 		<header>
-			<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
+			<h2>Evolutionary Architecture: <em>Architecting software for change</h2>
 			<a href="#" class="button">Learn More</a>
 		</header>
 	</section>
@@ -18,22 +18,22 @@ layout: default
 				<section class="4u">
 					<div class="box highlight">
 						<i class="icon major fa-paper-plane"></i>
-						<h3>This Is Important</h3>
-						<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+						<h3>Incremental</h3>
+						<p>Evolutionary Architecture is built one part at a time</p>
 					</div>
 				</section>
 				<section class="4u">
 					<div class="box highlight">
 						<i class="icon major fa-pencil"></i>
-						<h3>Also Important</h3>
-						<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+						<h3>First Principle</h3>
+						<p>Evolutionary Architectures makes decisions that make future change easier</p>
 					</div>
 				</section>
 				<section class="4u">
 					<div class="box highlight">
 						<i class="icon major fa-wrench"></i>
-						<h3>Probably Important</h3>
-						<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+						<h3>Multiple Dimensions</h3>
+						<p>Evolutionary Architectures must support both *technical* and *domain* changes</p>
 					</div>
 				</section>
 			</div>
@@ -44,56 +44,9 @@ layout: default
 	<section class="wrapper style2">
 		<div class="container">
 			<header class="major">
-				<h2>A gigantic heading you can use for whatever</h2>
-				<p>With a much smaller subtitle hanging out just below it</p>
+				<h2>Evolutionary Architecture: The Book</h2>
+				<p>In progress</p>
 			</header>
 		</div>
 	</section>
 
-<!-- Posts -->
-	<section class="wrapper style1">
-		<div class="container">
-			<div class="row">
-				<section class="6u">
-					<div class="box post">
-						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/pic01.jpg" alt="" /></a>
-						<div class="inner">
-							<h3>The First Thing</h3>
-							<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-						</div>
-					</div>
-				</section>
-				<section class="6u">
-					<div class="box post">
-						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/pic02.jpg" alt="" /></a>
-						<div class="inner">
-							<h3>The Second Thing</h3>
-							<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-						</div>
-					</div>
-				</section>
-			</div>
-			<div class="row">
-				<section class="6u">
-					<div class="box post">
-						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/pic03.jpg" alt="" /></a>
-						<div class="inner">
-							<h3>The Third Thing</h3>
-							<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-						</div>
-					</div>
-				</section>
-				<section class="6u">
-					<div class="box post">
-						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/pic04.jpg" alt="" /></a>
-						<div class="inner">
-							<h3>The Fourth Thing</h3>
-							<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-						</div>
-					</div>
-				</section>
-			</div>
-		</div>
-	</section>
-	
-	{% include cta.html %}
