Update to reflect latest book and links to articles.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: default
 <!-- Banner -->
 	<section id="banner">
 		<header>
-			<h2>Evolutionary Architecture: <em>Architecting software for change</h2>
-			<a href="#" class="button">Learn More</a>
+            <h2>Building Evolutionary Architectures: <em>Support Constant Change</em></h2>
+			<a href="precis.html" class="button">Learn More</a>
 		</header>
 	</section>
 
@@ -19,14 +19,14 @@ layout: default
 					<div class="box highlight">
 						<i class="icon major fa-paper-plane"></i>
 						<h3>Incremental</h3>
-						<p>Evolutionary Architecture is built one part at a time</p>
+						<p>Evolutionary architectures are built one part at a time, with many different increments. Speed to the next increment is key.</p>
 					</div>
 				</section>
 				<section class="4u">
 					<div class="box highlight">
 						<i class="icon major fa-pencil"></i>
-						<h3>First Principle</h3>
-						<p>Evolutionary Architectures makes decisions that make future change easier</p>
+						<h3>Fitness Functions</h3>
+						<p>Every system at different points of their life need to optimise to be "fit" for its environment. Evolutionary architectures make it explicit what "fit" means with as much automation as possible.</p>
 					</div>
 				</section>
 				<section class="4u">
@@ -44,8 +44,12 @@ layout: default
 	<section class="wrapper style2">
 		<div class="container">
 			<header class="major">
-				<h2>Evolutionary Architecture: The Book</h2>
-				<p>In progress</p>
+				<h2>Building Evolutionary Architecture: The Book</h2>
+                
+				<p>Long lived systems need to keep up with the pace of the environment in which they live. Learn <a href="precis.html">more here</a> about what we mean by evolutionary architectures and <a href="http://shop.oreilly.com/product/0636920080237.do">buy the book</a> to understand how to go about building them.
+</p>
+                                <a href="http://shop.oreilly.com/product/0636920080237.do"><img src="assets/images/building_evolutionary_architectures.jpg" width="400"/></a>
+
 			</header>
 		</div>
 	</section>
